# AutoHome

./: .gitignore  LICENSE  README  autohome.py  autohome.sh  configuration.json  credentials.json  mosquitto.conf.in
auth/: CMakeLists.txt
auth/dep/include/: sha2.h
auth/doc/: Doxyfile
auth/src/: auth-plugin.c
dev/sonoff/: sonoff.ino
devcontrol/: Event.py  database.py  devcontrol.py  device.py  mosquitto.conf.in  mqtthandlers.py  sensors.py
devcontrol/http/: devcontent.py
firmware/sonoff/: config.h
webserver/: automation.py
